--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				"mailto:rgohil2005@yahoo.co.in"
 		]
 }</script>
-    <meta property="og:title" content="Home">
+    <meta property="og:title" content="Potential Engineers">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#478ac9">
     <link rel="canonical" href="index.html">
