--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;">
   <head>
+	<meta name="google-site-verification" content="3hXFCdcD5jC4TlWCfhBqecSHt5w7V7smU-oBDt5HNP4" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="">
