--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Home</title>
+    <title>Potential Engineers</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -40,7 +40,7 @@
 				"mailto:rgohil2005@yahoo.co.in"
 		]
 }</script>
-    <meta property="og:title" content="Home">
+    <meta property="og:title" content="Potential engineers">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#478ac9">
     <link rel="canonical" href="index.html">
