--- a/About-us.html
+++ b/About-us.html
@@ -136,7 +136,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-custom-font u-font-Lobster u-text u-text-palette-4-base u-text-1" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">Potential EngineeringServices</h2>
         <div class="u-border-2 u-border-palette-4-base u-line u-line-horizontal u-line-1"></div>
-        <p class="u-text u-text-body-color u-text-2">We provide Tons of Certification Services all around India</p>
+        <p class="u-text u-text-body-color u-text-2">We provide Certification Services all around India</p>
         <div class="u-expanded-width u-list u-repeater u-list-1">
           <div class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-1" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
             <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-1">
