--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Potential Engineers</title>
+    <title>Home</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -40,7 +40,7 @@
 				"mailto:rgohil2005@yahoo.co.in"
 		]
 }</script>
-    <meta property="og:title" content="Potential Engineers">
+    <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#478ac9">
     <link rel="canonical" href="index.html">
@@ -113,8 +113,9 @@
           </div>
         </nav>
         <p class="u-text u-text-white u-text-1">
-          <a class="u-active-none u-btn u-button-link u-button-style u-hover-none u-none u-text-active-palette-2-base u-text-hover-grey-15 u-text-palette-1-base u-btn-1" href="Home.html" data-page-id="501527553">Potential Engineers</a>
-        </p><span class="u-icon u-icon-circle u-text-palette-2-base u-icon-4" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="Left" data-href="https://g.page/gohil-associates-surat?share" data-target="_blank"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 52 52" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-25ae"></use></svg><svg class="u-svg-content" id="svg-25ae" style=""><path style="fill:currentColor;" d="M38.853,5.324L38.853,5.324c-7.098-7.098-18.607-7.098-25.706,0h0
+          <a class="u-active-none u-btn u-button-link u-button-style u-hover-none u-none u-text-active-palette-2-base u-text-hover-grey-15 u-text-palette-1-base u-btn-1" href="Home.html" data-page-id="501527553"><span class="u-file-icon u-icon"><img src="images/favicon1.png" alt=""></span>&nbsp;Potential Engineers
+          </a>
+        </p><span class="u-icon u-icon-circle u-text-palette-2-base u-icon-5" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="Left" data-href="https://g.page/gohil-associates-surat?share" data-target="_blank"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 52 52" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-25ae"></use></svg><svg class="u-svg-content" id="svg-25ae" style=""><path style="fill:currentColor;" d="M38.853,5.324L38.853,5.324c-7.098-7.098-18.607-7.098-25.706,0h0
 	C6.751,11.72,6.031,23.763,11.459,31L26,52l14.541-21C45.969,23.763,45.249,11.72,38.853,5.324z M26.177,24c-3.314,0-6-2.686-6-6
 	s2.686-6,6-6s6,2.686,6,6S29.491,24,26.177,24z"></path></svg></span>
       </div></header>
