--- a/Contact-us.html
+++ b/Contact-us.html
@@ -3,14 +3,16 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="chartered engineer contact number,chartered engineer certification,chartered engineer in ahmedabad,chartered engineer near me,chartered engineer vadodara,chartered engineer in surat,chartered engineer ahmedabad,chartered engineer and valuer,chartered engineer australia,chartered engineer and professional engineer,find a chartered engineer,chartered engineer for valuation,
+chartered engineer hyderabad,chartered engineer hosur,chartered engineer india,chartered engineer in vadodara,chartered engineer in bharuch,chartered engineer in rajkot,chartered engineer kolkata,chartered engineer in kochi,chartered engineer in kanpur,chartered engineer license,chartered engineer license india,chartered engineer mechanical,chartered engineer mumbai,chartered engineer nagpur,chartered engineer pune,chartered engineer report,chartered engineer rubber stamp,chartered engineer tamil nadu,chartered engineer valuer,chartered engineer work in india,">
+    <meta name="description" content="We proivde Chartered engineer certification and valuation services all over India, contact us for more information">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Contact us</title>
+    <title>Contact us | Potential Engineers India</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Contact-us.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
+    <link rel="canonical" href="Contact us">
     <link rel="icon" href="images/favicon1.png">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     
@@ -24,16 +26,17 @@
 		"sameAs": [
 				"https://bit.ly/37tKTZ5",
 				"tel:+917203900714",
-				"mailto:rgohil2005@yahoo.co.in",
+				"mailto:ranjitsinhg@gmail.com",
 				"https://bit.ly/37tKTZ5",
 				"tel:+917203900714",
-				"mailto:rgohil2005@yahoo.co.in"
+				"mailto:ranjitsinhg@gmail.com"
 		]
 }</script>
-    <meta property="og:title" content="Contact us">
+    <meta property="og:title" content="Contact us | Potential Engineers India">
     <meta property="og:type" content="website">
+    <meta property="og:description" content="We proivde Chartered engineer certification and valuation services all over India, contact us for more information">
     <meta name="theme-color" content="#478ac9">
-    <link rel="canonical" href="index.html">
+    <link rel="canonical" href="Contact us">
     <meta property="og:url" content="index.html">
   <script>
     function gdprConfirmed() {
@@ -70,7 +73,7 @@
 	c1.4-1.4,1.8-3.3,1.3-5.2c-1.2-3.6-1.8-7.5-1.8-11.3c0-2.8-2.3-5.1-5.1-5.1H29.5c-2.8,0-5.1,2.3-5.1,5.1c0,32.2,26.2,58.4,58.4,58.4
 	c2.8,0,5.1-2.3,5.1-5.1V71.1C87.8,68.3,85.6,66,82.7,66z"></path></svg></span>
           </a>
-          <a class="u-social-url" target="_blank" title="Mail me" href="mailto:rgohil2005@yahoo.co.in"><span class="u-icon u-icon-circle u-social-email u-social-icon u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-81a9"></use></svg><svg class="u-svg-content" id="svg-81a9" style="color: rgb(219, 83, 75);"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path id="path3864" fill="#FFFFFF" d="M27.2,28h57.6c4,0,7.2,3.2,7.2,7.2l0,0v42.7c0,3.9-3.2,7.2-7.2,7.2l0,0H27.2
+          <a class="u-social-url" target="_blank" title="Mail me" href="mailto:ranjitsinhg@gmail.com"><span class="u-icon u-icon-circle u-social-email u-social-icon u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-81a9"></use></svg><svg class="u-svg-content" id="svg-81a9" style="color: rgb(219, 83, 75);"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path id="path3864" fill="#FFFFFF" d="M27.2,28h57.6c4,0,7.2,3.2,7.2,7.2l0,0v42.7c0,3.9-3.2,7.2-7.2,7.2l0,0H27.2
 	c-4,0-7.2-3.2-7.2-7.2V35.2C20,31.1,23.2,28,27.2,28 M56,52.9l28.8-17.8H27.2L56,52.9 M27.2,77.7h57.6V43.5L56,61.3L27.2,43.5V77.7z
 	"></path></svg></span>
           </a>
@@ -223,12 +226,12 @@
 	c1.4-1.4,1.8-3.3,1.3-5.2c-1.2-3.6-1.8-7.5-1.8-11.3c0-2.8-2.3-5.1-5.1-5.1H29.5c-2.8,0-5.1,2.3-5.1,5.1c0,32.2,26.2,58.4,58.4,58.4
 	c2.8,0,5.1-2.3,5.1-5.1V71.1C87.8,68.3,85.6,66,82.7,66z"></path></svg></span>
           </a>
-          <a class="u-social-url" target="_blank" title="Mail me" href="mailto:rgohil2005@yahoo.co.in"><span class="u-icon u-icon-circle u-social-email u-social-icon u-icon-7"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-def2"></use></svg><svg class="u-svg-content" id="svg-def2" style="color: rgb(219, 83, 75);"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path id="path3864" fill="#FFFFFF" d="M27.2,28h57.6c4,0,7.2,3.2,7.2,7.2l0,0v42.7c0,3.9-3.2,7.2-7.2,7.2l0,0H27.2
+          <a class="u-social-url" target="_blank" title="Mail me" href="mailto:ranjitsinhg@gmail.com"><span class="u-icon u-icon-circle u-social-email u-social-icon u-icon-7"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-def2"></use></svg><svg class="u-svg-content" id="svg-def2" style="color: rgb(219, 83, 75);"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path id="path3864" fill="#FFFFFF" d="M27.2,28h57.6c4,0,7.2,3.2,7.2,7.2l0,0v42.7c0,3.9-3.2,7.2-7.2,7.2l0,0H27.2
 	c-4,0-7.2-3.2-7.2-7.2V35.2C20,31.1,23.2,28,27.2,28 M56,52.9l28.8-17.8H27.2L56,52.9 M27.2,77.7h57.6V43.5L56,61.3L27.2,43.5V77.7z
 	"></path></svg></span>
           </a>
         </div>
-      </div></footer><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 20px; bottom: 20px;" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-spacing-10 u-text-palette-1-base" data-href="#"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 612.002 612.002" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-89bf"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 612.002 612.002" x="0px" y="0px" id="svg-89bf" style="enable-background:new 0 0 612.002 612.002;"><g><g><path d="M592.639,358.376L423.706,189.439c-64.904-64.892-170.509-64.892-235.421,0.005L19.363,358.379    c-25.817,25.817-25.817,67.674,0,93.489c25.817,25.817,67.679,25.819,93.491-0.002l168.92-168.927    c13.354-13.357,35.092-13.361,48.444-0.005l168.93,168.932c12.91,12.907,29.825,19.365,46.747,19.365    c16.915,0,33.835-6.455,46.747-19.365C618.456,426.051,618.456,384.193,592.639,358.376z"></path>
+      </div></footer><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 20px; bottom: 20px; background-image: none;" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-text-palette-1-base" data-href="#"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 612.002 612.002" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-89bf"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 612.002 612.002" x="0px" y="0px" id="svg-89bf" style="enable-background:new 0 0 612.002 612.002;"><g><g><path d="M592.639,358.376L423.706,189.439c-64.904-64.892-170.509-64.892-235.421,0.005L19.363,358.379    c-25.817,25.817-25.817,67.674,0,93.489c25.817,25.817,67.679,25.819,93.491-0.002l168.92-168.927    c13.354-13.357,35.092-13.361,48.444-0.005l168.93,168.932c12.91,12.907,29.825,19.365,46.747,19.365    c16.915,0,33.835-6.455,46.747-19.365C618.456,426.051,618.456,384.193,592.639,358.376z"></path>
 </g>
 </g></svg>
         
