--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ chartered engineer hyderabad,chartered engineer hosur,chartered engineer india,c
         <div class="skrollable skrollable-between u-active u-align-left u-carousel-item u-clearfix u-image u-section-3-1" data-image-width="780" data-image-height="1040">
           <div class="u-clearfix u-sheet u-sheet-1">
             <div class="u-container-style u-expanded-width-xs u-group u-palette-1-base u-radius-10 u-shape-round u-group-1">
-              <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-container-layout-1">
+              <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-container-layout-1">
                 <h4 class="u-text u-text-1">TFO Machine Certifications</h4>
               </div>
             </div>
@@ -170,7 +170,7 @@ chartered engineer hyderabad,chartered engineer hosur,chartered engineer india,c
         </div>
         <div class="skrollable skrollable-between u-align-left u-carousel-item u-clearfix u-image u-valign-top u-section-3-2" data-image-width="1156" data-image-height="534">
           <div class="u-container-style u-group u-palette-1-base u-radius-10 u-shape-round u-group-1">
-            <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-container-layout-1">
+            <div class="u-container-layout u-valign-middle u-container-layout-1">
               <h4 class="u-text u-text-1">Textile Machinary <br>Certification
               </h4>
             </div>
@@ -186,23 +186,23 @@ chartered engineer hyderabad,chartered engineer hosur,chartered engineer india,c
         <div class="skrollable skrollable-between u-align-left u-carousel-item u-clearfix u-image u-section-3-4" data-image-width="780" data-image-height="1040">
           <div class="u-clearfix u-sheet u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-xl u-sheet-1">
             <div class="u-container-style u-expanded-width-xs u-group u-palette-1-base u-radius-10 u-shape-round u-group-1">
-              <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-container-layout-1">
+              <div class="u-container-layout u-valign-middle-sm u-valign-middle-xl u-valign-middle-xs u-container-layout-1">
                 <h4 class="u-text u-text-1">Digital Printing Machine <br>Certifications
                 </h4>
               </div>
             </div>
           </div>
         </div>
-        <div class="skrollable skrollable-between u-align-left u-carousel-item u-clearfix u-image u-valign-bottom-xl u-section-3-5" data-image-width="1280" data-image-height="589">
+        <div class="skrollable skrollable-between u-align-left u-carousel-item u-clearfix u-image u-valign-bottom u-section-3-5" data-image-width="1280" data-image-height="589">
           <div class="u-container-style u-group u-palette-1-base u-radius-10 u-shape-round u-group-1">
-            <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-1">
+            <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-container-layout-1">
               <h4 class="u-text u-text-1">Printing Machinary Certifications</h4>
             </div>
           </div>
         </div>
         <div class="skrollable skrollable-between u-align-left u-carousel-item u-clearfix u-image u-section-3-6" data-image-width="1024" data-image-height="768">
           <div class="u-container-style u-group u-palette-1-base u-radius-10 u-shape-round u-group-1">
-            <div class="u-container-layout u-container-layout-1">
+            <div class="u-container-layout u-valign-middle-xl u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-1">
               <h4 class="u-text u-text-1">Plant and Machinery&nbsp;<br>Certifications
               </h4>
             </div>
