--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,6 @@ chartered engineer hyderabad,chartered engineer hosur,chartered engineer india,c
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
-    <link rel="canonical" href="Home">
     <link rel="icon" href="images/favicon1.png">
     
     
@@ -46,7 +45,7 @@ chartered engineer hyderabad,chartered engineer hosur,chartered engineer india,c
     <meta property="og:type" content="website">
     <meta property="og:description" content="We provide chartered engineering and valuation services all over India, call us now on +917203900714, or mail us at: - ranjitsinhg@gmail.com">
     <meta name="theme-color" content="#478ac9">
-    <link rel="canonical" href="Home">
+    <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   <script>
     function gdprConfirmed() {
@@ -66,7 +65,7 @@ chartered engineer hyderabad,chartered engineer hosur,chartered engineer india,c
     <!-- End Google Analytics -->\
     ".replace(/gascript/g, 'script'));
     }
-    </script></head>
+    </script><meta http-equiv='content-language' content='en-in'></head>
   <body class="u-body u-overlap u-overlap-transparent"><header class="u-align-center-sm u-align-center-xs u-clearfix u-grey-10 u-header u-header" id="sec-0ca3"><div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-social-icons u-spacing-10 u-social-icons-1" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="Left">
           <a class="u-social-url" target="_blank" title="Whatsapp" href="https://bit.ly/37tKTZ5"><span class="u-icon u-icon-circle u-social-icon u-social-whatsapp u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-d52c"></use></svg><svg class="u-svg-content" id="svg-d52c" style="color: rgb(0, 230, 118);"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M83.8,28.3C77.2,21.7,68.4,18,59,18c-19.3,0-35.1,15.7-35.1,35.1c0,6.2,1.6,12.2,4.7,17.5l-5,18.2L42.2,84
@@ -225,8 +224,8 @@ chartered engineer hyderabad,chartered engineer hosur,chartered engineer india,c
       </a>
     </section>
     <section class="u-align-center u-clearfix u-image u-shading u-section-4" src="" data-image-width="1280" data-image-height="853" id="sec-11ef">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-title u-text-1">Know More About us</h1>
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <h2 class="u-text u-text-1">Know More About us</h2>
         <a href="About-us.html" data-page-id="249228365" class="u-btn u-button-style u-palette-2-base u-btn-1">About us</a>
       </div>
     </section>
