--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="chartered engineer contact number,chartered engineer certification,chartered engineer in ahmedabad,chartered engineer near me,chartered engineer vadodara,chartered engineer in surat,chartered engineer ahmedabad,chartered engineer and valuer,chartered engineer australia,chartered engineer and professional engineer,find a chartered engineer,chartered engineer for valuation,
-chartered engineer hyderabad,chartered engineer hosur,chartered engineer india,chartered engineer in vadodara,chartered engineer in bharuch,chartered engineer in rajkot,chartered engineer kolkata,chartered engineer in kochi,chartered engineer in kanpur,chartered engineer license,chartered engineer license india,chartered engineer mechanical,chartered engineer mumbai,chartered engineer nagpur,chartered engineer pune,chartered engineer report,chartered engineer rubber stamp,chartered engineer tamil nadu,chartered engineer valuer,chartered engineer work in india,">
+    <meta name="keywords" content="chartered engineer surat,chartered engineer certificate provider in surat,chartered engineer in surat,chartered engineer in india,chartered engineer vadodara,chartered engineer in surat,chartered engineer ahmedabad,chartered engineer and valuer,chartered engineer and professional engineer,find a chartered engineer,chartered engineer for valuation,
+chartered engineer india,chartered engineer ahmdabad,chartered engineer india,chartered engineer in vadodara,chartered engineer in bharuch,chartered engineer in rajkot,chartered engineer kolkata,chartered engineer in kochi,chartered engineer in kanpur,chartered engineer license,chartered engineer license india,chartered mechanical engineer,chartered engineer report,chartered engineer valuer,chartered engineer work in india,">
     <meta name="description" content="We provide chartered engineering and valuation services all over India, call us now on +917203900714, or mail us at: - ranjitsinhg@gmail.com">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Chartered Engineers in India | Potential Engineers India</title>
+    <title>Chartered Engineers in India|Mechanical Engineer | Potential Engineers India</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -41,7 +41,7 @@ chartered engineer hyderabad,chartered engineer hosur,chartered engineer india,c
 				"mailto:ranjitsinhg@gmail.com"
 		]
 }</script>
-    <meta property="og:title" content="Chartered Engineers in India | Potential Engineers India">
+    <meta property="og:title" content="Chartered Engineers in India|Mechanical Engineer | Potential Engineers India">
     <meta property="og:type" content="website">
     <meta property="og:description" content="We provide chartered engineering and valuation services all over India, call us now on +917203900714, or mail us at: - ranjitsinhg@gmail.com">
     <meta name="theme-color" content="#478ac9">
