--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,7 @@
 chartered engineer india,chartered engineer ahmdabad,chartered engineer india,chartered engineer in vadodara,chartered engineer in bharuch,chartered engineer in rajkot,chartered engineer kolkata,chartered engineer in kochi,chartered engineer in kanpur,chartered engineer license,chartered engineer license india,chartered mechanical engineer,chartered engineer report,chartered engineer valuer,chartered engineer work in india">
     <meta name="description" content="We provide chartered engineering and valuation services all over India, call us now on +917203900714, or mail us at: - ranjitsinhg@gmail.com">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Chartered Engineers in India | Potential Engineers India</title>
+    <title>Chartered Engineers in India|Mechanical Engineer | Potential Engineers India</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
