--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="chartered engineer surat,chartered engineer certificate provider in surat,chartered engineer in surat,chartered engineer in india,chartered engineer vadodara,chartered engineer in surat,chartered engineer ahmedabad,chartered engineer and valuer,chartered engineer and professional engineer,find a chartered engineer,chartered engineer for valuation,
-chartered engineer india,chartered engineer ahmdabad,chartered engineer india,chartered engineer in vadodara,chartered engineer in bharuch,chartered engineer in rajkot,chartered engineer kolkata,chartered engineer in kochi,chartered engineer in kanpur,chartered engineer license,chartered engineer license india,chartered mechanical engineer,chartered engineer report,chartered engineer valuer,chartered engineer work in india,">
-    <meta name="description" content="We provide chartered engineering and valuation services all over India, call us now on +917203900714, or mail us at: - ranjitsinhg@gmail.com">
+    <meta name="keywords" content="chartered engineer,chartered engineer certification,chartered engineer in ahmedabad,chartered engineer surat,chartered engineer vadodara,chartered engineer in surat,chartered engineer ahmedabad,chartered engineer and valuer in surat,chartered engineer australia,chartered engineer and professional engineer,find a chartered engineer in surat,chartered engineer for valuation in surat,
+chartered engineer india,chartered engineer in vadodara,chartered engineer in bharuch,chartered engineer in rajkot,,chartered engineer license,chartered engineer license india,chartered engineer mechanical,chartered engineer mumbai,chartered engineer valuer,chartered engineer work in india,chartered engineer certification in surat,potential engineer in surat">
+    <meta name="description" content="Potential Engineer in Surat provide Certification services for EPCG,Installation certificate,plant performance certificate,certificate for custom clearance,subsidy for plant and machinary and More. Contact us now ">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Chartered Engineers in India|Mechanical Engineer | Potential Engineers India</title>
+    <title>Chartered Engineers in India | Potential Engineers India</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -41,9 +41,9 @@ chartered engineer india,chartered engineer ahmdabad,chartered engineer india,ch
 				"mailto:ranjitsinhg@gmail.com"
 		]
 }</script>
-    <meta property="og:title" content="Chartered Engineers in India|Mechanical Engineer | Potential Engineers India">
+    <meta property="og:title" content="Chartered Engineers in India | Potential Engineers India">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="We provide chartered engineering and valuation services all over India, call us now on +917203900714, or mail us at: - ranjitsinhg@gmail.com">
+    <meta property="og:description" content="Potential Engineer in Surat provide Certification services for EPCG,Installation certificate,plant performance certificate,certificate for custom clearance,subsidy for plant and machinary and More. Contact us now ">
     <meta name="theme-color" content="#478ac9">
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
@@ -65,7 +65,36 @@ chartered engineer india,chartered engineer ahmdabad,chartered engineer india,ch
     <!-- End Google Analytics -->\
     ".replace(/gascript/g, 'script'));
     }
-    </script><meta http-equiv='content-language' content='en-in'></head>
+    </script><meta http-equiv='content-language' content='en-in'>
+<meta property="og:title" content="Chartered Engineering and Certification provider in Surat">
+<meta property="og:site_name" content="Potential Engineers | Chartered Engineer">
+<meta property="og:url" content="https://siddhu1999.github.io/potentialengineers/">
+<meta property="og:description" content="We Provide Chartered Engineering Services All Around India">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://siddhu1999.github.io/potentialengineers/images/R9c01cfa1bee64149363b5d4877fb8573.png">
+
+	<meta name="twitter:url" content="https://siddhu1999.github.io/potentialengineers/">
+	<meta name="twitter:image" content="https://siddhu1999.github.io/potentialengineers/images/R9c01cfa1bee64149363b5d4877fb8573.png">
+	<meta name="twitter:description" content="We Provide Chartered Engineering Services All Around India">
+	<meta name="twitter:domain" content="https://siddhu1999.github.io/potentialengineers/">
+	<meta name="theme-color" content="#e5e5e5">
+	<meta name="msapplication-navbutton-color" content="#e5e5e5" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="#e5e5e5" /><script type="application/ld+json">
+{
+  "@context" : "http://schema.org",
+  "@type" : "LocalBusiness",
+  "name" : "Potential Engineer Surat",
+  "image" : "https://siddhu1999.github.io/potentialengineers/images/R9c01cfa1bee64149363b5d4877fb8573.png",
+  "address" : {
+    "@type" : "PostalAddress",
+    "streetAddress" : "7,shiv shakti row house,near saraswati school",
+    "addressLocality" : "Surat",
+    "addressRegion" : "Adajan,",
+    "addressCountry" : "India",
+    "postalCode" : "395009"
+  }
+}
+</script></head>
   <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap u-overlap-transparent"><header class="u-align-center-sm u-align-center-xs u-clearfix u-grey-10 u-header u-header" id="sec-0ca3"><div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-social-icons u-spacing-10 u-social-icons-1" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="Left">
           <a class="u-social-url" target="_blank" title="Whatsapp" href="https://bit.ly/37tKTZ5"><span class="u-icon u-icon-circle u-social-icon u-social-whatsapp u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-d52c"></use></svg><svg class="u-svg-content" id="svg-d52c" style="color: rgb(0, 230, 118);"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M83.8,28.3C77.2,21.7,68.4,18,59,18c-19.3,0-35.1,15.7-35.1,35.1c0,6.2,1.6,12.2,4.7,17.5l-5,18.2L42.2,84
@@ -133,7 +162,7 @@ chartered engineer india,chartered engineer ahmdabad,chartered engineer india,ch
               <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-valign-bottom-xs u-container-layout-2">
                   <h1 class="u-custom-font u-text u-text-palette-1-light-1 u-text-1">Potential Engineers</h1>
-                  <h3 class="u-text u-text-palette-1-light-1 u-text-2">We Provide Chartered Engineering Services All Around India<br>
+                  <h3 class="u-text u-text-palette-1-light-1 u-text-2">We Provide Chartered Engineering &amp; Certification Services&nbsp; All Around India<br>
                   </h3>
                   <a href="Home.html#sec-1841" data-page-id="501527553" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">Know More</a>
                 </div>
