--- a/About-us.html
+++ b/About-us.html
@@ -59,7 +59,36 @@
     <!-- End Google Analytics -->\
     ".replace(/gascript/g, 'script'));
     }
-    </script><meta http-equiv='content-language' content='en-in'></head>
+    </script><meta http-equiv='content-language' content='en-in'>
+<meta property="og:title" content="Chartered Engineering and Certification provider in Surat">
+<meta property="og:site_name" content="Potential Engineers | Chartered Engineer">
+<meta property="og:url" content="https://siddhu1999.github.io/potentialengineers/">
+<meta property="og:description" content="We Provide Chartered Engineering Services All Around India">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://siddhu1999.github.io/potentialengineers/images/R9c01cfa1bee64149363b5d4877fb8573.png">
+
+	<meta name="twitter:url" content="https://siddhu1999.github.io/potentialengineers/">
+	<meta name="twitter:image" content="https://siddhu1999.github.io/potentialengineers/images/R9c01cfa1bee64149363b5d4877fb8573.png">
+	<meta name="twitter:description" content="We Provide Chartered Engineering Services All Around India">
+	<meta name="twitter:domain" content="https://siddhu1999.github.io/potentialengineers/">
+	<meta name="theme-color" content="#e5e5e5">
+	<meta name="msapplication-navbutton-color" content="#e5e5e5" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="#e5e5e5" /><script type="application/ld+json">
+{
+  "@context" : "http://schema.org",
+  "@type" : "LocalBusiness",
+  "name" : "Potential Engineer Surat",
+  "image" : "https://siddhu1999.github.io/potentialengineers/images/R9c01cfa1bee64149363b5d4877fb8573.png",
+  "address" : {
+    "@type" : "PostalAddress",
+    "streetAddress" : "7,shiv shakti row house,near saraswati school",
+    "addressLocality" : "Surat",
+    "addressRegion" : "Adajan,",
+    "addressCountry" : "India",
+    "postalCode" : "395009"
+  }
+}
+</script></head>
   <body class="u-body"><header class="u-align-center-sm u-align-center-xs u-clearfix u-grey-10 u-header u-header" id="sec-0ca3"><div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-social-icons u-spacing-10 u-social-icons-1" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="Left">
           <a class="u-social-url" target="_blank" title="Whatsapp" href="https://bit.ly/37tKTZ5"><span class="u-icon u-icon-circle u-social-icon u-social-whatsapp u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-d52c"></use></svg><svg class="u-svg-content" id="svg-d52c" style="color: rgb(0, 230, 118);"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M83.8,28.3C77.2,21.7,68.4,18,59,18c-19.3,0-35.1,15.7-35.1,35.1c0,6.2,1.6,12.2,4.7,17.5l-5,18.2L42.2,84
