--- a/About-us.html
+++ b/About-us.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="chartered engineer certification uae,how to get a chartered engineer certificate,chartered engineer certification india,chartered engineer certification in india,can chartered engineer certify documents,can engineers certify documents,chartered engineer certificate for customs in india,chartered engineer certificate for installation of machinery,chartered engineer certificate for second hand machinery,chartered engineer certificate for export,chartered engineer certificate from iei,chartered engineer license,chartered engineer certificate pdf,chartered engineer certificate qatar,chartered engineer certificate uk,chartered engineer valuation certificate">
     <meta name="description" content="We provide Chartered Engineering services all over india, call us at +917203900714 or mail us ranjitsinhg@gmail.com">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Our Chartered engineering services | Potential Engineers India</title>
+    <title>Our Chartered engineering services in Surat | Potential Engineers India</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="About-us.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -40,7 +40,7 @@
     <meta property="og:description" content="We provide Chartered Engineering services all over india, call us at +917203900714 or mail us ranjitsinhg@gmail.com">
     <meta name="theme-color" content="#478ac9">
     <link rel="canonical" href="About us | Potential Engineers">
-    <meta property="og:url" content="index.html">
+    <meta property="og:url" content="About-us.html">
   <script>
     function gdprConfirmed() {
         return true;
