--- a/Contact-us.html
+++ b/Contact-us.html
@@ -7,7 +7,7 @@
 chartered engineer hyderabad,chartered engineer hosur,chartered engineer india,chartered engineer in vadodara,chartered engineer in bharuch,chartered engineer in rajkot,chartered engineer kolkata,chartered engineer in kochi,chartered engineer in kanpur,chartered engineer license,chartered engineer license india,chartered engineer mechanical,chartered engineer mumbai,chartered engineer nagpur,chartered engineer pune,chartered engineer report,chartered engineer rubber stamp,chartered engineer tamil nadu,chartered engineer valuer,chartered engineer work in india,">
     <meta name="description" content="We proivde Chartered engineer certification and valuation services all over India, contact us for more information">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Contact us | Potential Engineers India</title>
+    <title>Contact Chartered Engineer in Surat | Potential Engineers India</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Contact-us.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -32,7 +32,7 @@ chartered engineer hyderabad,chartered engineer hosur,chartered engineer india,c
 				"mailto:ranjitsinhg@gmail.com"
 		]
 }</script>
-    <meta property="og:title" content="Contact us | Potential Engineers India">
+    <meta property="og:title" content="Contact chartered engineer in surat| Potential Engineers India">
     <meta property="og:type" content="website">
     <meta property="og:description" content="We proivde Chartered engineer certification and valuation services all over India, contact us for more information">
     <meta name="theme-color" content="#478ac9">
