--- a/Contact-us.html
+++ b/Contact-us.html
@@ -3,9 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="chartered engineer contact number,chartered engineer certification,chartered engineer in ahmedabad,chartered engineer near me,chartered engineer vadodara,chartered engineer in surat,chartered engineer ahmedabad,chartered engineer and valuer,chartered engineer australia,chartered engineer and professional engineer,find a chartered engineer,chartered engineer for valuation,
-chartered engineer hyderabad,chartered engineer hosur,chartered engineer india,chartered engineer in vadodara,chartered engineer in bharuch,chartered engineer in rajkot,chartered engineer kolkata,chartered engineer in kochi,chartered engineer in kanpur,chartered engineer license,chartered engineer license india,chartered engineer mechanical,chartered engineer mumbai,chartered engineer nagpur,chartered engineer pune,chartered engineer report,chartered engineer rubber stamp,chartered engineer tamil nadu,chartered engineer valuer,chartered engineer work in india,">
-    <meta name="description" content="We proivde Chartered engineer certification and valuation services all over India, contact us for more information">
+    <meta name="keywords" content="chartered engineer contact number,chartered engineer certification in surat,chartered engineer in surat,chartered engineer surat,chartered engineering surat,chartered engineer in surat,chartered engineer in ahmedabad,chartered engineer and valuer in surat,chartered engineer gujarat,chartered engineer and professional engineer in surat,find a chartered engineer in surat,chartered engineer for valuation in surat,
+chartered engineer india,chartered engineer in vadodara,chartered engineer in bharuch,chartered engineer in rajkot,chartered engineer license in surat,chartered engineer license india,chartered engineer mechanical,chartered engineer mumbai">
+    <meta name="description" content="We proivde Chartered engineer certification and valuation services all over Gujarat and Maharashtra, contact us for more information">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Contact Chartered Engineer in Surat | Potential Engineers India</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
