--- a/About-us.html
+++ b/About-us.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="chartered engineer certification uae,how to get a chartered engineer certificate,chartered engineer certification india,chartered engineer certification in india,can chartered engineer certify documents,can engineers certify documents,chartered engineer certificate for customs in india,chartered engineer certificate for installation of machinery,chartered engineer certificate for second hand machinery,chartered engineer certificate for export,chartered engineer certificate from iei,chartered engineer license,chartered engineer certificate pdf,chartered engineer certificate qatar,chartered engineer certificate uk,chartered engineer valuation certificate">
+    <meta name="keywords" content="chartered engineer certification india,chartered engineer certification gujarat,chartered engineer certification in Surat,can chartered engineer certify documents in surat,chartered engineer certificate for customs in Surat,chartered engineer certificate for installation of machinery in surat,chartered engineer certificate for second hand machinery in surat,chartered engineer certificate for export in surat,chartered engineer certificate from iei in surat,chartered engineer license in surat,chartered engineer certificate pdf in surat,chartered engineer certificate gujarat,chartered engineer certificate maharashtra,chartered engineer valuation certificate">
     <meta name="description" content="We provide Chartered Engineering services all over india, call us at +917203900714 or mail us ranjitsinhg@gmail.com">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Our Chartered engineering services in Surat | Potential Engineers India</title>
@@ -35,9 +35,9 @@
 				"mailto:ranjitsinhg@gmail.com"
 		]
 }</script>
-    <meta property="og:title" content="Our Chartered engineering services | Potential Engineers India">
+    <meta property="og:title" content="Our Chartered engineering services in surat | Potential Engineers India">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="We provide Chartered Engineering services all over india, call us at +917203900714 or mail us ranjitsinhg@gmail.com">
+    <meta property="og:description" content="We provide Chartered Engineering services in Gujarat and Maharashtra, call us at +917203900714 or mail us ranjitsinhg@gmail.com">
     <meta name="theme-color" content="#478ac9">
     <link rel="canonical" href="About us | Potential Engineers">
     <meta property="og:url" content="About-us.html">
