--- a/Home.html
+++ b/Home.html
@@ -48,20 +48,21 @@
 <meta property="og:url" content="https://siddhu1999.github.io/potentialengineers/">
 <meta property="og:description" content="We Provide Chartered Engineering Services All Around India">
 <meta property="og:type" content="website">
-<meta property="og:image" content="https://siddhu1999.github.io/potentialengineers/images/R9c01cfa1bee64149363b5d4877fb8573.png">
+<meta property="og:image" content="https://siddhu1999.github.io/potentialengineers/images/Potential_engineer.png">
 
 	<meta name="twitter:url" content="https://siddhu1999.github.io/potentialengineers/">
-	<meta name="twitter:image" content="https://siddhu1999.github.io/potentialengineers/images/R9c01cfa1bee64149363b5d4877fb8573.png">
+	<meta name="twitter:image" content="https://siddhu1999.github.io/potentialengineers/images/Potential_engineer.png">
 	<meta name="twitter:description" content="We Provide Chartered Engineering Services All Around India">
 	<meta name="twitter:domain" content="https://siddhu1999.github.io/potentialengineers/">
 	<meta name="theme-color" content="#e5e5e5">
 	<meta name="msapplication-navbutton-color" content="#e5e5e5" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="#e5e5e5" /><script type="application/ld+json">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#e5e5e5" />
+	  <script type="application/ld+json">
 {
   "@context" : "http://schema.org",
   "@type" : "LocalBusiness",
   "name" : "Potential Engineer Surat",
-  "image" : "https://siddhu1999.github.io/potentialengineers/images/R9c01cfa1bee64149363b5d4877fb8573.png",
+  "image" : "https://siddhu1999.github.io/potentialengineers/images/Potential_engineer.png",
   "telephone" : "+917203900714",
   "email" : "ranjitsinhg@gmail.com",
   "address" : {
@@ -140,7 +141,7 @@
               </div>
               <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-valign-bottom-xs u-container-layout-2">
-                  <h1 class="u-custom-font u-text u-text-palette-1-light-1 u-text-1">Potential Engineers Surat</h1>
+                  <h1 class="u-custom-font u-text u-text-palette-1-light-1 u-text-1">Chartered Engineer | Potential Engineers Surat</h1>
                   <h2 class="u-text u-text-palette-1-light-1 u-text-2">We Provide Chartered Engineering,Certification Services &amp; Valuation Services In India<br>
                   </h2>
                   <a href="Home.html#sec-1841" data-page-id="501527553" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">Know More</a>
