--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,7 @@
 ">
     <meta name="description" content="Potential Engineer in Gujarat and Maharashtra provide Chartered Engineer services for EPCG,Valuation Certification and Installation certificate,plant performance certificate,certificate for custom clearance,subsidy for plant and machinary and More. Contact us now ">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Potential Engineers Surat | Chartered Engineer and Approved Valuer</title>
+    <title>Chartered Engineer and Approved Valuer | Potential Engineers Surat</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
