--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="="chartered engineer in surat,chartered engineer certification in surat,chartered engineer in ahmedabad,chartered engineer in gujarat,chartered engineer vadodara,chartered engineer in surat,chartered engineer in ahmedabad,chartered engineer and valuer in surat,chartered engineer india,chartered engineer and professional engineer in surat,find a chartered engineer in surat,chartered engineer for valuation in surat,chartered engineer india,chartered engineer in vadodara,chartered engineer in bharuch,chartered engineer in rajkot,chartered engineer license in surart,chartered engineer license india,chartered mechanical engineer in surat,chartered engineer mumbai,chartered engineer valuer in surat,chartered engineer work in india,chartered engineer certification in surat,potential engineer in surat">
     <meta name="description" content="Potential Engineer in Gujarat and Maharashtra provide Certification services for EPCG,Installation certificate,plant performance certificate,certificate for custom clearance,subsidy for plant and machinary and More. Contact us now">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Potential Engineers Surat | Chartered Engineer and Approved Valuer </title>
+    <title>Chartered Engineer and Approved Valuer | Potential Engineers Surat</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
